--- a/index.html
+++ b/index.html
@@ -11,13 +11,11 @@
 </head>
 <body>
     <section class="calculator">
-        <div class="display">
-            <input type="text" id="formula" disabled><br>
+        <div class="display" id="formula">
         </div>
-        <div class="display">
-            <input type="text" id="display" disabled><br>
-            <input type="text" id="reset" hidden><br>
+        <div class="display" id="display">
         </div>
+        <input type="text" id="reset" hidden><br>
         <div id="count" style="display:none;">0</div>
         <div class="number" style="width:350px">
             <button id="clickAllClear" value="AC" style="flex-grow:1;border-radius: 100px;">AC</button>
